// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search shows an input with filters 1`] = `
<div
  className="sc-jSUZER kpVgXe"
  disabled={false}
>
  <input
    className="sc-gKPRtg dDQQPa"
    disabled={false}
    onChange={[Function]}
    placeholder="Image id..."
    type="text"
    value="some value"
  />
  <div
    className="sc-gswNZR iLSNqH"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="sc-dkrFOg ircyDF"
    >
       
      <div
        className="sc-bcXHqe bYPlzq"
      >
        <svg
          viewBox="0 0 256 256"
        >
          <g
            transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)"
          >
            <path
              d="M 90 24.25 c 0 -0.896 -0.342 -1.792 -1.025 -2.475 c -1.366 -1.367 -3.583 -1.367 -4.949 0 L 45 60.8 L 5.975 21.775 c -1.367 -1.367 -3.583 -1.367 -4.95 0 c -1.366 1.367 -1.366 3.583 0 4.95 l 41.5 41.5 c 1.366 1.367 3.583 1.367 4.949 0 l 41.5 -41.5 C 89.658 26.042 90 25.146 90 24.25 z"
              strokeLinecap="round"
              transform=" matrix(1 0 0 1 0 0) "
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      className="sc-hLBbgP cIvraF"
      open={false}
    >
      <div
        className="sc-eDvSVe HjOed"
        onClick={[Function]}
      >
        ASC
      </div>
      <div
        className="sc-eDvSVe HjOed"
        onClick={[Function]}
      >
        DESC
      </div>
    </div>
  </div>
  <div
    className="sc-gswNZR iLSNqH"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="sc-dkrFOg ircyDF"
    >
       
      <div
        className="sc-bcXHqe bYPlzq"
      >
        <svg
          viewBox="0 0 256 256"
        >
          <g
            transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)"
          >
            <path
              d="M 90 24.25 c 0 -0.896 -0.342 -1.792 -1.025 -2.475 c -1.366 -1.367 -3.583 -1.367 -4.949 0 L 45 60.8 L 5.975 21.775 c -1.367 -1.367 -3.583 -1.367 -4.95 0 c -1.366 1.367 -1.366 3.583 0 4.95 l 41.5 41.5 c 1.366 1.367 3.583 1.367 4.949 0 l 41.5 -41.5 C 89.658 26.042 90 25.146 90 24.25 z"
              strokeLinecap="round"
              transform=" matrix(1 0 0 1 0 0) "
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      className="sc-hLBbgP cIvraF"
      open={false}
    >
      <div
        className="sc-eDvSVe HjOed"
        onClick={[Function]}
      >
        Abyssinian
      </div>
      <div
        className="sc-eDvSVe HjOed"
        onClick={[Function]}
      >
        Aegean
      </div>
    </div>
  </div>
</div>
`;

exports[`Search shows an input with no filters 1`] = `
<div
  className="sc-jSUZER kpVgXe"
  disabled={false}
>
  <input
    className="sc-gKPRtg dDQQPa"
    disabled={false}
    onChange={[Function]}
    placeholder="Image id..."
    type="text"
    value="some value"
  />
</div>
`;

exports[`Search shows an input with single filter 1`] = `
<div
  className="sc-jSUZER kpVgXe"
  disabled={false}
>
  <input
    className="sc-gKPRtg dDQQPa"
    disabled={false}
    onChange={[Function]}
    placeholder="Image id..."
    type="text"
    value="some value"
  />
  <div
    className="sc-gswNZR iLSNqH"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="sc-dkrFOg ircyDF"
    >
       
      <div
        className="sc-bcXHqe bYPlzq"
      >
        <svg
          viewBox="0 0 256 256"
        >
          <g
            transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)"
          >
            <path
              d="M 90 24.25 c 0 -0.896 -0.342 -1.792 -1.025 -2.475 c -1.366 -1.367 -3.583 -1.367 -4.949 0 L 45 60.8 L 5.975 21.775 c -1.367 -1.367 -3.583 -1.367 -4.95 0 c -1.366 1.367 -1.366 3.583 0 4.95 l 41.5 41.5 c 1.366 1.367 3.583 1.367 4.949 0 l 41.5 -41.5 C 89.658 26.042 90 25.146 90 24.25 z"
              strokeLinecap="round"
              transform=" matrix(1 0 0 1 0 0) "
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      className="sc-hLBbgP cIvraF"
      open={false}
    >
      <div
        className="sc-eDvSVe HjOed"
        onClick={[Function]}
      >
        ASC
      </div>
      <div
        className="sc-eDvSVe HjOed"
        onClick={[Function]}
      >
        DESC
      </div>
    </div>
  </div>
</div>
`;

exports[`Search shows shows disabled state 1`] = `
<div
  className="sc-jSUZER QqSIC"
  disabled={true}
>
  <input
    className="sc-gKPRtg dDQQPa"
    disabled={true}
    onChange={[Function]}
    placeholder="Image id..."
    type="text"
    value="some value"
  />
  <div
    className="sc-gswNZR ckUllH"
    disabled={true}
    onClick={[Function]}
  >
    <div
      className="sc-dkrFOg ircyDF"
    >
      ASC
       
      <div
        className="sc-bcXHqe bYPlzq"
      >
        <svg
          viewBox="0 0 256 256"
        >
          <g
            transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)"
          >
            <path
              d="M 90 24.25 c 0 -0.896 -0.342 -1.792 -1.025 -2.475 c -1.366 -1.367 -3.583 -1.367 -4.949 0 L 45 60.8 L 5.975 21.775 c -1.367 -1.367 -3.583 -1.367 -4.95 0 c -1.366 1.367 -1.366 3.583 0 4.95 l 41.5 41.5 c 1.366 1.367 3.583 1.367 4.949 0 l 41.5 -41.5 C 89.658 26.042 90 25.146 90 24.25 z"
              strokeLinecap="round"
              transform=" matrix(1 0 0 1 0 0) "
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      className="sc-hLBbgP cIvraF"
      open={false}
    >
      <div
        className="sc-eDvSVe HjOed"
        onClick={[Function]}
      >
        DESC
      </div>
    </div>
  </div>
  <div
    className="sc-gswNZR ckUllH"
    disabled={true}
    onClick={[Function]}
  >
    <div
      className="sc-dkrFOg ircyDF"
    >
      Abyssinian
       
      <div
        className="sc-bcXHqe bYPlzq"
      >
        <svg
          viewBox="0 0 256 256"
        >
          <g
            transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)"
          >
            <path
              d="M 90 24.25 c 0 -0.896 -0.342 -1.792 -1.025 -2.475 c -1.366 -1.367 -3.583 -1.367 -4.949 0 L 45 60.8 L 5.975 21.775 c -1.367 -1.367 -3.583 -1.367 -4.95 0 c -1.366 1.367 -1.366 3.583 0 4.95 l 41.5 41.5 c 1.366 1.367 3.583 1.367 4.949 0 l 41.5 -41.5 C 89.658 26.042 90 25.146 90 24.25 z"
              strokeLinecap="round"
              transform=" matrix(1 0 0 1 0 0) "
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      className="sc-hLBbgP cIvraF"
      open={false}
    >
      <div
        className="sc-eDvSVe HjOed"
        onClick={[Function]}
      >
        Aegean
      </div>
    </div>
  </div>
</div>
`;
